try again to fix the alignment problem of index.html

--- a/media/css/main.css
+++ b/media/css/main.css
@@ -8,7 +8,7 @@ body{font-size:14pt;}
     border-radius: 8px; 
     margin: 1em 0;
     padding: 1em;
-    width: 100%;
+    width: 98%;
     box-shadow: 0 1px 3px #c1c1c1;
     text-decoration: none;
         }
